# NotesCounter

./: Anchor.toml  CLAUDE.md  Cargo.toml
programs/app_program/: Cargo.toml
programs/app_program/src/: lib.rs
programs/app_program/src/instructions/: create_note.rs  edit_note.rs  mod.rs
programs/app_program/src/state/: note.rs
programs/counter_service/: Cargo.toml
programs/counter_service/src/: lib.rs
programs/counter_service/src/instructions/: create_user_stats.rs  increment_on_create.rs  increment_on_edit.rs  mod.rs
programs/counter_service/src/state/: mod.rs  user_counter.rs
shared/: Cargo.toml
shared-derive/: Cargo.toml  EXAMPLES.md
shared-derive/src/: lib.rs  size_calculator.rs
shared/src/: lib.rs  traits.rs
tests/: global-counter-service.ts
